
ChangeLog for jsrsasign

* Changes between 5.0.12 to 5.0.13
  - base64x.js
    - KJUR.lang.String class added and its some static
      methods isHex, isInteger, isBase64, isBase64URL and
      isIntegerArray also defined.
    - KJUR.lang added to npm package namespace.
  - tool_string.html added to provide string converter tool.
  - jws.js
    API document updated.
  - CryptoJS codes in code.google.com seem to be removed and
    404 not found so that CryptoJS references in all test
    were moved to local files.
  - CryptoJS codes were moved to ext/cj directory.
  - tool_b64u{enc,dec}.html script URL fix

* Changes between 5.0.11 to 5.0.12
  - jws between 3.3.3 to 3.3.4
    - support grace period for verifyJWT method.
      This is to allow time difference between 
      JWT generator and verifier.
  - asn1hex
    - API document update

* Changes between 5.0.10 to 5.0.11
  - X509v1 certificate support in KEYUTIL.getKey and
    X509.getPublicKeyInfoPropOfCertPEM
  - sample_node/showcert added
  - x509.js 1.1.8 to 1.1.9
    - X509.DN_ATTRHEX added to show EV cert DN
    - X509v1 certificate support in X509.getPublicKeyInfoPropOfCertPEM.
      This makes KEYUTIL.getKey support X509v1 certificate.
  - test/qunit-do-x509-getinfo.html
    - test case added for EV cert DN
  - tool_{jwt,jwtveri}.html
    - fix typo. Thanks @ParkinT.
  - ext/{rsa,rsa2}.js
    - allow hash func to be passed to OAEP. Thanks @davedoesdev.
  - asn1x509.js 1.0.13 to 1.0.14
    - add 'SN' (i.e. SurName) support in distinguished name.
      Thanks @kurtsson.

* Changes between 5.0.9 to 5.0.10
  - sample_node/jwtverify bugfix
  - x509 1.1.7 to 1.1.8
    - following methods are added:
      - getInfo()
      - getExtSubjectKeyIdentifier()
      - getExtAuthorityKeyIdentifier()
      - getExtExtKeyUsageName()
      - getExtSubjectAltName()
      - getExtCRLDistributionPointsURI()

* Changes between 5.0.8 to 5.0.9 (2016-Apr-19)
  - ext/rng.js
    - use window.crypto.getRandomValues for SecureRandom