@@ -8,20 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
     <title>Online Certificate Viewer</title>
-<script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/components/core.js"></script>
-<script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/components/sha1.js"></script>
-
-<script language="JavaScript" type="text/javascript" src="ext/jsbn.js"></script>
-<script language="JavaScript" type="text/javascript" src="ext/jsbn2.js"></script>
-<script language="JavaScript" type="text/javascript" src="ext/rsa.js"></script>
-<script language="JavaScript" type="text/javascript" src="ext/rsa2.js"></script>
-<script language="JavaScript" type="text/javascript" src="ext/sha1.js"></script>
-<script language="JavaScript" type="text/javascript" src="ext/base64.js"></script>
-<script language="JavaScript" type="text/javascript" src="crypto-1.1.min.js"></script>
-<script language="JavaScript" type="text/javascript" src="asn1hex-1.1.min.js"></script>
-<script language="JavaScript" type="text/javascript" src="rsapem-1.1.min.js"></script>
-<script language="JavaScript" type="text/javascript" src="rsasign-1.2.min.js"></script>
-<script language="JavaScript" type="text/javascript" src="x509-1.1.min.js"></script>
+<script language="JavaScript" type="text/javascript" src="jsrsasign-latest-all-min.js"></script>
 <script language="JavaScript" type="text/javascript">
 function doView() {
   var sCert = document.form1.cert1.value;
